Here's the commented version of the code:

```c++
# Copyright 2015 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""Secure client-server interoperability as a unit test."""

import sys
import unittest

import grpc

from src.proto.grpc.testing import test_pb2_grpc
from tests.interop import _intraop_test_case
from tests.interop import resources
from tests.interop import service
from tests.unit import test_common

# Hostname override for SSL/TLS verification
_SERVER_HOST_OVERRIDE = "foo.test.google.fr"

# Skip this test if running under Python 2.x since ProtoBuf descriptors have moved to Python 3
@unittest.skipIf(
    sys.version_info[0] < 3, "ProtoBuf descriptor has moved on from Python2"
)
class SecureIntraopTest(_intraop_test_case.IntraopTestCase, unittest.TestCase):
    """Test case for secure client-server interoperability testing."""
    
    def setUp(self):
        """Set up test environment before each test method."""
        # Create a test server
        self.server = test_common.test_server()
        
        # Add TestService implementation to the server
        test_pb2_grpc.add_TestServiceServicer_to_server(
            service.TestService(), self.server
        )
        
        # Configure secure port with SSL credentials
        port = self.server.add_secure_port(
            "[::]:0",  # Bind to all interfaces on an ephemeral port
            grpc.ssl_server_credentials(
                [(resources.private_key(), resources.certificate_chain())]
            ),
        )
        
        # Start the server
        self.server.start()
        
        # Create a secure channel stub for client testing
        self.stub = test_pb2_grpc.TestServiceStub(
            grpc.secure_channel(
                "localhost:{}".format(port),  # Connect to local server
                grpc.ssl_channel_credentials(
                    resources.test_root_certificates()  # Use test root certificates
                ),
                (  # Channel options
                    (
                        "grpc.ssl_target_name_override",
                        _SERVER_HOST_OVERRIDE,  # Override hostname for SSL verification
                    ),
                ),
            )
        )

    def tearDown(self):
        """Clean up test environment after each test method."""
        # Stop the server
        self.server.stop(None)

if __name__ == "__main__":
    # Run tests with verbose output
    unittest.main(verbosity=2)
```

Key improvements made:
1. Added class-level docstring explaining the purpose of the test case
2. Added detailed method-level docstrings for setUp() and tearDown()
3. Added inline comments explaining key operations and parameters
4. Clarified the purpose of constants and configuration values
5. Explained the skip condition decorator
6. Added comments about the secure channel configuration
7. Documented the main block execution

The comments now provide a clear understanding of:
- The test's purpose
- The setup and teardown process
- Security configurations
- Important parameters and their purposes
- The overall flow of the test case